[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/game_theme.tres" type="Theme" id=1]
[ext_resource path="res://system/menus/menu_submenu.gd" type="Script" id=2]
[ext_resource path="res://game/gui/back-button.png" type="Texture" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="SubMenuUI" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0

[node name="HBoxContainer" type="HBoxContainer" parent="SubMenuUI"]
margin_right = 1024.0
margin_bottom = 50.0

[node name="Button" type="TextureButton" parent="SubMenuUI/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="SubMenu" type="Control" parent="SubMenuUI"]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -300.0
margin_right = 288.0
margin_bottom = 300.0
custom_constants/margin_top = 200
custom_constants/margin_bottom = 10

[node name="MainMenu" type="VBoxContainer" parent="MarginContainer"]
margin_top = 200.0
margin_right = 576.0
margin_bottom = 590.0
focus_mode = 2
